# email_alert

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: mailer-ci.yml
docs/: conf.py  index.rst
docs/_build/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree
docs/_build/.doctrees/autoapi/: index.doctree
docs/_build/.doctrees/autoapi/email_alert_module/: index.doctree
docs/_build/.doctrees/autoapi/email_alert_module/alert/: index.doctree
docs/_build/.doctrees/autoapi/email_alert_module/mailer/: index.doctree
docs/_build/_modules/: index.html
docs/_build/_modules/email_alert_module/: alert.html  mailer.html
docs/_build/_sources/autoapi/: index.rst.txt
docs/_build/_sources/autoapi/email_alert_module/: index.rst.txt
docs/_build/_sources/autoapi/email_alert_module/alert/: index.rst.txt
docs/_build/_sources/autoapi/email_alert_module/mailer/: index.rst.txt
docs/_build/autoapi/: index.html
docs/_build/autoapi/email_alert_module/: index.html
docs/_build/autoapi/email_alert_module/alert/: index.html
docs/_build/autoapi/email_alert_module/mailer/: index.html
email_alert_module/: alert.py  mailer.py
