[tool.poetry]
name = "email-alert"
version = "0.1.0"
description = "A project for sending email alerts"
authors = ["Soyoung Yoon <soyyoon16@gmail.com>"]
license = "1"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
