[tool.poetry]
name = "email-alert"
version = "0.1.0"
description = "A project for sending email alerts"
authors = ["Soyoung Yoon <soyyoon16@gmail.com>"]
packages = [{ include = "email_alert_module" }] 
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
matplotlib = ">=3.4.3"

[tool.poetry.group.dev.dependencies]
myst-nb = {version = "^1.1.1", python = "^3.9"}
sphinx-autoapi = "^3.3.1"
sphinx-rtd-theme = "^2.0.0"
pre-commit = "^3.8.0"
ruff = "^0.6.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
